--- a/styles/style.css
+++ b/styles/style.css
@@ -1,1 +1,338 @@
-/* место для вашего кода */
+.header {
+  font-family: Raleway, sans-serif;
+  width: 1052px;
+  height: 105px;
+  display: grid;
+  grid-template-columns: 1fr 135px 1fr;
+
+  margin: 92px 24px 94px 24px;
+}
+
+.header__menu {
+  display: flex;
+}
+
+.header__links-list {
+  display: flex;
+  width: 100%;
+  gap: 34px;
+  padding-left: 25px;
+  align-items: center;
+  margin: auto;
+  white-space: nowrap;
+  font-size: 18px;
+  font-style: normal;
+}
+
+.header__links-list-item {
+  list-style: circle;
+  text-decoration: none;
+}
+
+.header__links-list-item_no-bullit {
+  list-style: none;
+  text-decoration: none;
+}
+
+.header__link {
+  text-decoration: underline;
+  text-underline-offset: 3px;
+  font-weight: 400;
+  font-size: 18px;
+}
+.header__link_active {
+  text-decoration: none;
+}
+
+.header__logo {
+  display: flex;
+  justify-content: center;
+}
+
+.header__logo-image {
+  width: 148px;
+  height: 105px;
+}
+
+.address {
+  display: flex;
+  flex-direction: column;
+  line-height: 25px;
+  font-style: normal;
+  font-size: 18px;
+}
+
+.header__address {
+  justify-content: center;
+  margin-left: auto;
+  margin-right: 60px;
+}
+
+.cover {
+  position: relative;
+  background-position: center;
+  background-size: cover;
+  background-image: url(/images/cover.jpg);
+  z-index: 1;
+}
+
+.overlay {
+  position: absolute;
+  background: rgb(0 0 0/ 0.6);
+  z-index: 1;
+  inset: 0;
+}
+
+.cover__title {
+  position: relative;
+  padding: 165px 50px 125px 50px;
+  color: white;
+  font-weight: 700;
+  font-size: 100px;
+  text-transform: uppercase;
+  z-index: 2;
+}
+
+.aligned-text {
+  display: block;
+  letter-spacing: 0.3em;
+  margin-bottom: 6px;
+}
+
+.aligned-text_center {
+  text-align: center;
+}
+
+.aligned-text_right {
+  text-align: right;
+}
+
+.letter-spacing-extended {
+  letter-spacing: 0.6em;
+}
+
+.no-letter-spacing {
+  letter-spacing: 0em;
+}
+.cover__description {
+  display: flex;
+  position: relative;
+  justify-content: space-around;
+  align-items: center;
+  padding-bottom: 47px;
+  margin-bottom: 0;
+  z-index: 2;
+}
+
+.cover__description-text {
+  color: white;
+  font-size: 22px;
+  font-weight: 400;
+  text-transform: uppercase;
+  word-spacing: 0.85em;
+  margin-left: 35px;
+}
+
+.bet-button {
+  font-size: 22px;
+  font-weight: 400;
+  text-transform: uppercase;
+  color: white;
+  background-color: transparent;
+  border: 1px solid white;
+  height: 50px;
+  width: 255px;
+  margin-right: 10px;
+}
+
+.lots {
+  margin: 179px 24px 181px 24px;
+}
+
+.lots__heading {
+  text-transform: uppercase;
+  font-weight: 700;
+  font-size: 40px;
+  line-height: 47px;
+  margin-left: 40px;
+}
+
+.lots__card-list {
+  display: flex;
+  flex-wrap: wrap;
+  list-style: none;
+  margin-top: 27px;
+  gap: 25px;
+}
+
+.lots__card-list-item {
+  width: 334px;
+  min-height: 563px;
+  flex-grow: 1;
+  background-size: cover;
+  background-position: center;
+  position: relative;
+  z-index: 2;
+}
+
+.card_type_film {
+  background-image: url(/images/card-lot-01.jpg);
+}
+
+.card_type_book {
+  background-image: url(/images/card-lot-02.jpg);
+}
+
+.card_type_picture {
+  background-image: url(/images/card-lot-03.jpg);
+}
+
+.card-link {
+  display: block;
+  height: 100%;
+}
+
+.card {
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  padding: 51px 40px 50px 40px;
+  text-align: left;
+}
+.card__title {
+  text-decoration: underline;
+  color: white;
+  font-weight: 700;
+  font-size: 22px;
+  line-height: 26.4px;
+  text-transform: uppercase;
+  position: relative;
+  z-index: 2;
+}
+
+.card__text {
+  color: white;
+  font-weight: 400;
+  font-size: 20px;
+  line-height: 24px;
+  position: relative;
+  z-index: 2;
+}
+
+.lots__look-more-link {
+  display: flex;
+  font-weight: 400;
+  font-size: 20px;
+  line-height: 23.48px;
+  margin-top: 30px;
+  margin-left: 40px;
+}
+
+.three__bullet {
+  letter-spacing: 0.13em;
+}
+
+.about {
+  margin: 0 24px 0 24px;
+  display: grid;
+  grid-template-columns: 1fr 2fr;
+  justify-items: center;
+  column-gap: 13px;
+}
+
+.about__logo {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 240px;
+  height: 240px;
+  background-color: black;
+  border-radius: 50%;
+  grid-row: 1/-1;
+  grid-column: 1/2;
+}
+
+.about__logo-image {
+  width: 148px;
+  height: 114px;
+}
+
+.about__column {
+  text-align: left;
+}
+
+.about__title {
+  font-weight: 700;
+  font-size: 40px;
+  line-height: 46.96px;
+  text-transform: uppercase;
+  margin-bottom: 100px;
+  margin-top: 100px;
+}
+
+.about__text {
+  font-weight: 400;
+  font-size: 20px;
+  line-height: 24px;
+  margin-bottom: 24px;
+}
+
+.about__text-no-margin {
+  margin-bottom: 0;
+}
+.footer {
+display: flex;
+justify-content: space-between;
+margin: 181px 50px 88px 50px;
+}
+
+.footer__menu {
+
+}
+
+.footer__menu-list {
+display: flex;
+flex-direction: column;
+align-items: center;
+justify-content: center;
+margin-left: 2em;
+text-underline-offset: 3px;
+}
+
+.footer__menu-list-item {
+display: flex;
+list-style: none;
+font-weight: 400;
+font-size: 18px;
+line-height: 21.13px;
+
+
+
+}
+
+.footer__menu-link {
+
+}
+
+.footer__menu-link_active {
+  text-decoration: none;
+}
+
+.footer__social-list {
+display: flex;
+list-style: none;
+gap: 48px;
+}
+
+.footer__social-list-item {
+}
+
+.footer__social-link {
+
+}
+
+.footer__social-icon {
+  width: 48px;
+  height: 48px;
+}
