--- a/styles/style.css
+++ b/styles/style.css
@@ -72,7 +72,7 @@
   position: relative;
   background-position: center;
   background-size: cover;
-  background-image: url(./images/cover.jpg);
+  background-image: url(../images/cover.jpg);
   z-index: 1;
 }
 
@@ -176,15 +176,15 @@
 }
 
 .card_type_film {
-  background-image: url(./images/card-lot-01.jpg);
+  background-image: url(../images/card-lot-01.jpg);
 }
 
 .card_type_book {
-  background-image: url(./images/card-lot-02.jpg);
+  background-image: url(../images/card-lot-02.jpg);
 }
 
 .card_type_picture {
-  background-image: url(./images/card-lot-03.jpg);
+  background-image: url(../images/card-lot-03.jpg);
 }
 
 .card-link {
